--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-socket
-pyopenssl
-cryptography
-threading
-google.oauth2
+cffi==1.17.0
+cryptography==43.0.0
+pycparser==2.22
+pyfiglet==1.0.2
+toml==0.10.2
