updating admin commands fro monitoring

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,23 @@
+branca==0.7.2
+certifi==2024.7.4
 cffi==1.17.0
+charset-normalizer==3.3.2
+click==8.1.7
 cryptography==43.0.0
+decorator==5.1.1
+folium==0.17.0
+future==1.0.0
+geocoder==1.38.1
+idna==3.8
+Jinja2==3.1.4
+MarkupSafe==2.1.5
+numpy==2.1.0
+psutil==6.0.0
 pycparser==2.22
 pyfiglet==1.0.2
+ratelim==0.1.6
+requests==2.32.3
+six==1.16.0
 toml==0.10.2
+urllib3==2.2.2
+xyzservices==2024.6.0
